# HackerOS-System-Monitor

./: Cargo.toml  README.md  build.hl
source-code/: app.rs  graph.rs  main.rs  process_object.rs  stats.rs  style.css
source-code/views/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  overview.rs  processes.rs
